# live-search

./: Cargo.toml  README.md  mini.json
docs/: index.md
quickwit/: movies-config.json
src/: indexer.rs  lib.rs  main.rs  rest.rs
