[package]
name = "search-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_qs = {version = "0.8", features = ["warp"]}
tantivy = "0.15"
tokio = { version = "1.9", features = ["full"] }
warp = "0.3"
once_cell = "1.4"
pickledb = "0.4"
